--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,10 +1,7 @@
 ---
-title: "Portfolio item number 2"
+title: "Portfolio item number 2 >CLICA AQUI<"
 excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
-
-
-<iframe title="case" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=b23d3e87-90b5-4f8a-834e-2d43e865f0c3&autoAuth=true&ctid=43656c6d-2186-4df1-b2a9-a0ed32b41410" frameborder="0" allowFullScreen="true"></iframe>
+<iframe title="case" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMmI2ZGE3YjUtYTMzOS00MzFiLTllNTItYWZkMjEwYTU4MjI3IiwidCI6ImQ0NTMyNTgzLTI5YWQtNDVmNC1iODdmLTdkY2Q1NzE4ZGYzZiJ9" frameborder="0" allowFullScreen="true"></iframe>
